# briefing

./: .editorconfig  .env.example  .gitignore  README.md  docker-compose.yml
backend/: .env.example  manage.py  pyproject.toml
backend/apps/briefing/: admin.py  apps.py  models.py
backend/apps/briefing/api/: serializers.py  urls.py  views.py
backend/apps/briefing/migrations/: 0001_initial.py
backend/apps/methodology/: __init__.py  apps.py  models.py  signals.py
backend/apps/methodology/admin/: __init__.py  _helpers.py  ato.py  catalogo_sinal.py  insight.py  pergunta.py  regra.py  roteiro.py
backend/apps/methodology/management/commands/: seed_methodology.py
backend/apps/methodology/migrations/: 0001_initial.py  0002_alter_ato_ordem_alter_ato_subtitulo_publico_and_more.py  0003_alter_ato_configuracao_alter_ato_descricao_interna_and_more.py  0004_frasedevolutiva_pergunta_arquetipo_and_more.py
backend/apps/methodology/seeds/: _loader.py  _spec.py  ato_1_calibracao.py
backend/config/: celery.py  urls.py
backend/config/settings/: base.py  development.py  production.py  testing.py
backend/shared/: exceptions.py
backend/shared/domain/: base_entity.py  base_value_object.py
docker/backend/: Dockerfile
docker/postgres/: init.sql
docs/architecture/decisions/: 0001-monorepo-vs-polyrepo.md  0002-django-vs-fastapi.md  0003-versionamento-append-only.md  0004-stack-dual-next-htmx.md  0005-engine-content-separation.md  0006-determinismo-antes-de-ia.md
docs/methodology/: framework-de-perguntas.md
frontend/: package.json
frontend/src/styles/: globals.css
(+11 files in other folders)
